tdf#122419 optimize autofilter search when there are no dates

Change-Id: Id679b4a2e7a290780142daae39d28a429fb3b11d